[metadata]
version = attr: qatg.__version__
description_file = README.md
license_files = LICENSE.txt
description = An open-source quantum automatic test generator with online test and error mitigation (OTEM), compatible with Qiskit.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: BSD Software License
    Topic :: Scientific/Engineering :: Physics
    Intended Audience :: Science/Research

[options]
python_requires = >=3.9
